# streamlit-google-picker

./: .env.exemple  .gitignore  CONTRIBUTING.md  LICENSE  README.md  dev.py  pyproject.toml
.github/actions/build_component_wheels/: action.yaml
.github/replay-files/: template.json
.github/workflows/: ci.yaml
google_picker/: README.md
google_picker/google_picker/: __init__.py  example.py
google_picker/google_picker/frontend/: package-lock.json  package.json
google_picker/google_picker/frontend/src/: MyComponent.tsx
streamlit_google_picker/: MANIFEST.in  example.py  uploaded_file.py
streamlit_google_picker/e2e/: test_template.py
streamlit_google_picker/frontend/: package-lock.json  package.json
streamlit_google_picker/frontend/src/: driveIcon.tsx  googlePicker.module.css  googlePicker.tsx  googlePickerHelpers.ts  icons.tsx  index.tsx
streamlit_google_picker/streamlit_google_picker/: __init__.py  example.py
streamlit_google_picker/streamlit_google_picker/frontend/src/: google_picker.tsx
streamlit_google_picker/tests/: test_import.py
tests/: test_import.py
