[project]
name = "streamlit-google-picker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "streamlit>=1.46.1",
    "streamlit-oauth>=0.1.14",
]

[dependency-groups]
dev = [
    "playwright>=1.53.0",
    "pytest>=8.4.1",
    "setuptools>=80.9.0",
]
